ex6/testdata/typechecker/ok/NestedVars3.java
class MainClass{
    public static void main(String[] args){

    }
}

class A {
    boolean a;
    boolean b;
    int m(int x, int y) {
        int a;
        int b;
        if (this.b) {
            b = 5;
            a = 2;
        } else {
            a = 3;
        }
        return a;
    }
}